--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 # main text of home
-name: Demo account
-bio: my new tagline
+name: Jade Li
+bio: Significant others
 
 # twitter summary info
 description: A blog about technology and stuff related
@@ -8,7 +8,7 @@ description: A blog about technology and stuff related
 # if it's an external image, update below for true
 # better with square images
 external-image: false
-picture: assets/images/analytics.jpg
+picture: http://www.sakuraintbuffet.com.sg/wp-content/uploads/2012/07/sakura-tree.png
 
 url: https://hupilidemo.github.io/indigo
 # your url: http://USERNAME.github.io
