--- a/_config.yml
+++ b/_config.yml
@@ -8,7 +8,7 @@ description: A blog about technology and stuff related
 # if it's an external image, update below for true
 # better with square images
 external-image: false
-picture: www.sakuraintbuffet.com.sg/wp-content/uploads/2012/07/sakura-tree.png
+picture:
 
 url: https://hupilidemo.github.io/indigo
 # your url: http://USERNAME.github.io
